--- a/task-stage-1/12/index.htm
+++ b/task-stage-1/12/index.htm
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body>
     <div class="container">
         <h2 class="heading">Пример 1</h2>
@@ -14,19 +16,26 @@
 
             <div class="item">
                 <h2 class="item__name">Title 1</h2>
-                <p class="item__content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore eveniet laudantium ut rerum, aliquid accusantium quis fugit sint commodi dolorum eos! Dolores possimus nihil quibusdam ea debitis sunt eos placeat.</p>
+                <p class="item__content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore eveniet
+                    laudantium ut rerum, aliquid accusantium quis fugit sint commodi dolorum eos! Dolores possimus nihil
+                    quibusdam ea debitis sunt eos placeat.</p>
                 <div class="item__footer">Read More</div>
             </div>
 
             <div class="item">
                 <h2 class="item__name">Title 2</h2>
-                <p class="item__content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore eveniet laudantium ut rerum, aliquid accusantium quis fugit sint commodi dolorum eos! Dolores possimus nihil quibusdam ea debitis sunt eos placeat.</p>
+                <p class="item__content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore eveniet
+                    laudantium ut rerum, aliquid accusantium quis fugit sint commodi dolorum eos! Dolores possimus nihil
+                    quibusdam ea debitis sunt eos placeat.</p>
                 <div class="item__footer">Read More</div>
             </div>
 
             <div class="item">
                 <h2 class="item__name">Title 3</h2>
-                <p class="item__content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore eveniet laudantium ut rerum, aliquid accusantium quis fugit sint commodi dolorum eos! Dolores possimus nihil quibusdam ea debitis sunt eos placeat. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore eveniet laudantium ut rerum, aliquid accusantium quis fugit sint commodi dolorum eos! </p>
+                <p class="item__content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore eveniet
+                    laudantium ut rerum, aliquid accusantium quis fugit sint commodi dolorum eos! Dolores possimus nihil
+                    quibusdam ea debitis sunt eos placeat. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Inventore eveniet laudantium ut rerum, aliquid accusantium quis fugit sint commodi dolorum eos! </p>
                 <div class="item__footer">Read More</div>
             </div>
 
@@ -41,8 +50,14 @@
             <div class="item2">
                 <div class="item2__bg"></div>
                 <div class="item2__body">
-                    <h2 class="item2__name">Title 2</h2>
-                    <p class="item2__content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore eveniet laudantium ut rerum, aliquid accusantium quis fugit sint commodi dolorum eos! Dolores possimus nihil quibusdam ea debitis sunt eos placeat.</p>
+                    <div class="item2_text">
+                        <h2 class="item2__name">Title 2</h2>
+                        <p class="item2__content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore
+                            eveniet laudantium ut rerum, aliquid accusantium quis fugit sint commodi dolorum eos!
+                            Dolores
+                            possimus nihil quibusdam ea debitis sunt eos placeat.</p>
+
+                    </div>
                     <div class="item2__footer">Read More</div>
                 </div>
             </div>
@@ -50,8 +65,15 @@
             <div class="item2">
                 <div class="item2__bg"></div>
                 <div class="item2__body">
-                    <h2 class="item2__name">Title 2</h2>
-                    <p class="item2__content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore eveniet laudantium ut rerum, aliquid accusantium quis fugit sint commodi dolorum eos! Dolores possimus nihil quibusdam ea debitis sunt eos placeat aliquid accusantium quis fugit sint commodi dolorum eos! Dolores possimus nihil quibusdam ea debitis sunt eos placeat.</p>
+                    <div class="item2_text">
+                        <h2 class="item2__name">Title 2</h2>
+                        <p class="item2__content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore
+                            eveniet laudantium ut rerum, aliquid accusantium quis fugit sint commodi dolorum eos!
+                            Dolores
+                            possimus nihil quibusdam ea debitis sunt eos placeat aliquid accusantium quis fugit sint
+                            commodi
+                            dolorum eos! Dolores possimus nihil quibusdam ea debitis sunt eos placeat.</p>
+                    </div>
                     <div class="item2__footer">Read More</div>
                 </div>
             </div>
@@ -59,8 +81,17 @@
             <div class="item2">
                 <div class="item2__bg"></div>
                 <div class="item2__body">
+                    <div class="item2_text">
                     <h2 class="item2__name">Title 3</h2>
-                    <p class="item2__content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore eveniet laudantium ut rerum, aliquid accusantium quis fugit sint commodi dolorum eos! Dolores possimus nihil quibusdam ea debitis sunt eos placeat. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore eveniet laudantium ut rerum, aliquid accusantium quis fugit sint commodi dolorum eos! Dolores possimus nihil quibusdam ea debitis sunt eos placeat. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore eveniet laudantium ut rerum, aliquid accusantium quis fugit sint commodi dolorum eos! Dolores possimus nihil quibusdam ea debitis sunt eos placeat.</p>
+                    <p class="item2__content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore
+                        eveniet laudantium ut rerum, aliquid accusantium quis fugit sint commodi dolorum eos! Dolores
+                        possimus nihil quibusdam ea debitis sunt eos placeat. Lorem ipsum, dolor sit amet consectetur
+                        adipisicing elit. Inventore eveniet laudantium ut rerum, aliquid accusantium quis fugit sint
+                        commodi dolorum eos! Dolores possimus nihil quibusdam ea debitis sunt eos placeat. Lorem ipsum,
+                        dolor sit amet consectetur adipisicing elit. Inventore eveniet laudantium ut rerum, aliquid
+                        accusantium quis fugit sint commodi dolorum eos! Dolores possimus nihil quibusdam ea debitis
+                        sunt eos placeat.</p>
+                    </div>
                     <div class="item2__footer">Read More</div>
                 </div>
             </div>
@@ -69,4 +100,5 @@
     </div>
 
 </body>
+
 </html>
