--- a/task-stage-1/24/index.html
+++ b/task-stage-1/24/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,34 +8,38 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body class="page">
 
     <div class="page__cell container color">
-        <p class="example-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis ipsa consequatur eius corrupti non esse necessitatibus odio. Laboriosam sequi aut distinctio, architecto, provident fuga expedita voluptas magnam quidem, perferendis praesentium.</p>
+        <p class="example-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis ipsa consequatur
+            eius corrupti non esse necessitatibus odio. Laboriosam sequi aut distinctio, architecto, provident fuga
+            expedita voluptas magnam quidem, perferendis praesentium.</p>
     </div>
 
     <div class="page__cell gallery">
-            <div class="gallery__item"></div>
-            <div class="gallery__item"></div>
-            <div class="gallery__item"></div>
-            <div class="gallery__item"></div>
-            <div class="gallery__item"></div>
-            <div class="gallery__item"></div>
-            <div class="gallery__item"></div>
-            <div class="gallery__item"></div>
-            <div class="gallery__item"></div>
-            <div class="gallery__item"></div>
-            <div class="gallery__item"></div>
-            <div class="gallery__item"></div>
-            <div class="gallery__item"></div>
-            <div class="gallery__item"></div>
-            <div class="gallery__item"></div>
-            <div class="gallery__item"></div>
-            <div class="gallery__item"></div>
-            <div class="gallery__item"></div>
-            <div class="gallery__item"></div>
-            <div class="gallery__item"></div>
+        <div class="gallery__item"></div>
+        <div class="gallery__item"></div>
+        <div class="gallery__item"></div>
+        <div class="gallery__item"></div>
+        <div class="gallery__item"></div>
+        <div class="gallery__item"></div>
+        <div class="gallery__item"></div>
+        <div class="gallery__item"></div>
+        <div class="gallery__item"></div>
+        <div class="gallery__item"></div>
+        <div class="gallery__item"></div>
+        <div class="gallery__item"></div>
+        <div class="gallery__item"></div>
+        <div class="gallery__item"></div>
+        <div class="gallery__item"></div>
+        <div class="gallery__item"></div>
+        <div class="gallery__item"></div>
+        <div class="gallery__item"></div>
+        <div class="gallery__item"></div>
+        <div class="gallery__item"></div>
     </div>
 
 </body>
+
 </html>
