--- a/task-stage-2/42/index.html
+++ b/task-stage-2/42/index.html
@@ -25,18 +25,18 @@
             },
         ];
 
-        const objectItem = '';
+        const objectItem = listUsers[0];
 
         function changeObjectMutate(object) {
-
+            object.firstName = 'Эдуард'
         }
 
         function changeObjectImmutable(object) {
-
+            return {...object, firstName: 'Эдуард'}
         }
 
-        console.log(changeObjectMutate(objectItem))
-        // console.log(changeObjectImmutable(objectItem))
+        // console.log(changeObjectMutate(objectItem))
+        console.log(changeObjectImmutable(objectItem))
 
         console.log(objectItem)
         console.log(listUsers)
