--- a/task-stage-3/63/index.html
+++ b/task-stage-3/63/index.html
@@ -1,34 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Задание 63</title>
     <style>
-        body{
+        body {
             font-family: sans-serif;
             margin: 0;
         }
-        *, ::after, ::before {
+
+        *,
+        ::after,
+        ::before {
             box-sizing: border-box;
         }
-        .container{
+
+        .container {
             max-width: 800px;
             width: 100%;
             margin: 0 auto;
             padding: 50px 0;
         }
-
     </style>
 </head>
+
 <body>
     <div class="container">
         <ul class="js-list"></ul>
     </div>
     <script>
-        const list = document.querySelector('.js-list')
-
-
+        async function render() {
+            const list = document.querySelector('.js-list')
+            const fet = await fetch('https://jsonplaceholder.typicode.com/posts/');
+            let lst = await fet.json();
+            console.log(lst);
+            lst.forEach(e => {
+            const li = document.createElement('li');
+            li.textContent = e.title;
+            list.appendChild(li);
+        });
+        }
+        render();
+        
     </script>
 </body>
+
 </html>
